--- a/Api/requirements.txt
+++ b/Api/requirements.txt
@@ -1,7 +1,15 @@
+absl-py==0.12.0
+attrs==21.2.0
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+mediapipe==0.8.4.2
+numpy==1.20.3
+opencv-contrib-python==4.5.2.52
+opencv-python==4.5.2.52
+protobuf==3.17.1
+six==1.16.0
 Werkzeug==2.0.1
