--- a/Api/requirements.txt
+++ b/Api/requirements.txt
@@ -5,11 +5,19 @@ colorama==0.4.4
 Flask==2.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
 MarkupSafe==2.0.1
 mediapipe==0.8.4.2
 numpy==1.20.3
 opencv-contrib-python==4.5.2.52
 opencv-python==4.5.2.52
+pandas==1.2.4
 protobuf==3.17.1
+python-dateutil==2.8.1
+pytz==2021.1
+scikit-learn==0.22.2
+scipy==1.6.3
 six==1.16.0
+sklearn==0.0
+threadpoolctl==2.1.0
 Werkzeug==2.0.1
