--- a/Api/requirements.txt
+++ b/Api/requirements.txt
@@ -3,11 +3,13 @@ attrs==21.2.0
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+future==0.18.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 joblib==1.0.1
 MarkupSafe==2.0.1
 mediapipe==0.8.4.2
+mime==0.1.0
 numpy==1.20.3
 opencv-contrib-python==4.5.2.52
 opencv-python==4.5.2.52
