--- a/Api/requirements.txt
+++ b/Api/requirements.txt
@@ -12,7 +12,7 @@ mediapipe==0.8.4.2
 mime==0.1.0
 numpy==1.20.3
 opencv-contrib-python==4.5.2.52
-opencv-python==4.5.2.52
+opencv-python-headless==4.5.2.54
 pandas==1.2.4
 protobuf==3.17.1
 python-dateutil==2.8.1
