--- a/Api/requirements.txt
+++ b/Api/requirements.txt
@@ -14,6 +14,7 @@ numpy==1.20.3
 opencv-contrib-python==4.5.2.52
 opencv-python-headless==4.5.2.54
 pandas==1.2.4
+Pillow==8.2.0
 protobuf==3.17.1
 python-dateutil==2.8.1
 pytz==2021.1
